# salsify-monax

./: .gitignore  .test.sh.swo  Makefile  Makefile.in  README.md  add_camera.sh  agent.py  analyze_test.py  clean.sh  compile.sh  configure.ac  nohup.out  run.sh  run_mahimahi.sh  stop.sh  test.sh
log/: recv.info  sender.info
man/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in
src/decoder/: Makefile  Makefile.in  raster_handle.cc
src/display/: Makefile  Makefile.am  Makefile.in  display.cc  display.hh
src/encoder/: Makefile  Makefile.in
src/frontend/: Makefile  Makefile.am  Makefile.in  xc-framesize  xc-merge
src/input/: Makefile  Makefile.in
src/net/: Makefile  Makefile.am  Makefile.in  monax.cc  monax.cpp  monax.h  monax.hh  packet.cc  packet.hh
src/salsify/: AppServer.grpc.pb.cc  AppServer.grpc.pb.h  AppServer.pb.cc  AppServer.pb.h  AppServer.proto  Makefile  Makefile.am  Makefile.in  fake-webcam  salsify-receiver.cc  salsify-sender.cc  update_interface.sh
src/tests/: Makefile  Makefile.in
src/uWebsockets/: Makefile.in
src/util/: 2d.hh  Makefile  Makefile.am  Makefile.in  ssim.cc
tests/: .run_sender.sh.swp  run_ffmpeg.sh  run_receiver.sh  run_sender.sh
traces/: gen_band.py
traces/Belgium_4GLTE/: bandwidth_10Mbps  bandwidth_8Mbps
traces/bandwidth/: 10Mb_report_bus_0001.json  10Mb_report_car_0001.json  10Mb_report_foot_0001.json  10Mb_report_train_0001.json  10Mb_report_tram_0001.json  12Mb_report_bicycle_0001.json  12Mb_report_bus_0001.json  15Mb_report_bicycle_0001.json  15Mb_report_car_0001.json  15Mb_report_foot_0001.json  15Mb_report_train_0001.json  8Mb_report_bicycle_0001.json  8Mb_report_car_0001.json  8Mb_report_foot_0001.json  8Mb_report_tram_0001.json  report_bicycle_0002.json  report_bus_0002.json  report_bus_0003.json  report_bus_0004.json  report_bus_0005.json  report_bus_0006.json  report_bus_0007.json  report_bus_0008.json  report_bus_0009.json  report_bus_0010.json  report_bus_0011.json  report_car_0002.json  report_car_0003.json  report_car_0004.json  report_car_0005.json  report_car_0006.json  report_car_0007.json  report_car_0008.json  report_foot_0002.json  report_foot_0003.json  report_foot_0004.json  report_foot_0005.json  report_foot_0006.json  report_foot_0007.json  report_foot_0008.json  (+9 more)
video_quality/: add_qrcode.py  video_analysis.py
